feat: location search module
